Redone Sidebar Design. Changed MBI Logo

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>Nawwaf Sudi</title>
     <link rel="stylesheet" href="main.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -40,7 +40,10 @@
             </p>
             <div class="features">
                 <article class="card">
+                    <div class="card-img">
                     <img src ="assets/images/echomagecard.png">
+                    </div>
+
                     <div class = "card-description">
                         <h2>
                             Echomage
@@ -52,9 +55,11 @@
                         </p>
                     </div>
                 </article>
-                <hr/>
+                <hr class="divider"/>
                 <article class="card">
+                    <div class="card-img">
                     <img src ="assets/images/quillycard.png">
+                    </div>
                     <div class = "card-description">
                         <h2>
                             Quilly
@@ -77,7 +82,9 @@
             </p>
             <div class="features">
                 <article class="card">
+                    <div class="card-img">
                     <img src ="assets/images/mbilogocard.png">
+                    </div>
                     <div class = "card-description">
                         <h2>
                             Meraih Beasiswa Talk Panelist
