Miscellaneous font and layout adjustments

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                     <p class="sidebar-tagline">NUS Data Science and Analytics 2028</p>
                 </section>
                 <nav class="navbar">
-                    <a class="navbutton">About Me</a>
-                    <a class="navbutton">Projects</a>
-                    <a class="navbutton">Experience</a>
+                    <a>About Me</a>
+                    <a>Projects</a>
+                    <a>Experience</a>
                 </nav>
             </aside>
         </div>
