--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet" />
+        <link rel="icon" type="image/svg+xml" href="assets/images/githublogo.svg">
     </head>
     <body>
         <header></header>
