--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet" />
-        <link rel="icon" type="image/svg+xml" href="assets/images/githublogo.svg">
+        <link rel="icon" type="image/svg+xml" href="assets/images/githublogo.svg" />
     </head>
     <body>
         <header></header>
@@ -26,14 +26,20 @@
             </aside>
         </div>
         <main>
-            <section id="about" class="section">
-                <h1 class="section-heading">About Me</h1>
-                <p class="section-content">
-                    Hi! I'm a second year undergraduate student at the National University of Singapore, studying Data
-                    Science and Analytics. I'm an ASEAN scholar, interested in mathematics and game development.
-                </p>
-            </section>
-            <hr />
+            <div class="about-container">
+                <div class="banner"></div>
+                <section id="about" class="About">
+                    <div>
+                        <h1 class="section-heading">About Me.</h1>
+                        <p class="section-content">
+                            Hi! I'm a second year undergraduate student at the National University of Singapore,
+                            studying Data Science and Analytics. I'm an ASEAN scholar, interested in mathematics and
+                            game development.
+                        </p>
+                    </div>
+                    <img class="profile-pic" src="assets/images/profile-pic.jpg" />
+                </section>
+            </div>
             <section id="projects" class="section">
                 <h1 class="section-heading">Projects</h1>
                 <p class="section-content">
@@ -77,10 +83,9 @@
                     </article>
                 </div>
             </section>
-            <hr />
             <section id="experience" class="section">
                 <h1 class="section-heading">Experience</h1>
-                <p class="section-content"></p>
+                <p class="section-content">Beyond academics, I also find comfort in </p>
                 <div class="features">
                     <article class="card">
                         <div class="card-img">
