--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                         <h1 class="section-heading">About Me.</h1>
                         <p class="section-content">
                             Hi! I'm a second year undergraduate student at the National University of Singapore,
-                            studying Data Science and Analytics. I'm an ASEAN scholar, interested in mathematics and
-                            game development.
+                            studying Data Science and Analytics. I'm an ASEAN scholar, interested in Statistics and
+                            Game Design.
                         </p>
                     </div>
                     <img class="profile-pic" src="assets/images/profile-pic.jpg" />
@@ -43,8 +43,8 @@
             <section id="projects" class="section">
                 <h1 class="section-heading">Projects</h1>
                 <p class="section-content">
-                    Below are some of my projects that I've worked on, both in my free time, and during courses. You can
-                    click on the title to learn more.
+                    Below are some of my projects that I've worked on, both in my free time, and as part of coursework. You can
+                    click on each of these to see the details.
                 </p>
                 <div class="features">
                     <article class="card">
@@ -76,8 +76,8 @@
                             </div>
                             <p>
                                 A simple windows app made with WPF that that is intended for personal use. It features
-                                drag-and-drop charts and other miscellaeous functions that I often use for game art
-                                reference and designing app workflow.
+                                an intuitive drag-and-drop system and other miscellaeous functions that I often use for game art
+                                reference and designing app workflow, all serialized in a custom .quillx JSON schema.
                             </p>
                         </div>
                     </article>
@@ -85,7 +85,7 @@
             </section>
             <section id="experience" class="section">
                 <h1 class="section-heading">Experience</h1>
-                <p class="section-content">Beyond academics, I also find comfort in </p>
+                <p class="section-content">Beyond academics, I also find comfort in participating in communities that shares my interests. Below are some notable experience I had as a student.</p>
                 <div class="features">
                     <article class="card">
                         <div class="card-img">
@@ -99,7 +99,7 @@
                             <p>
                                 I was given the honor to be a panelist in Meraih Beasiswa talk as an alumnus of MBI. I
                                 shared general pointers, information, and gennerally had a great time connecting with my
-                                juniors.
+                                juniors that shares my passion for learning.
                             </p>
                         </div>
                     </article>
