Added illustration and web logo on header.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
         <link rel="icon" type="image/svg+xml" href="assets/images/githublogo.svg" />
     </head>
     <body>
-        <header></header>
+        <header>
+            <div class="left-header">
+                <img src="assets/images/header-bg2.svg">
+            </div>
+            <div class="right-header">
+                <img src="assets/images/githublogo.svg">
+            </div>
+        </header>
         <div class="sidebar">
             <aside>
                 <section class="h">
