--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <body>
         <header>
             <div class="left-header">
-                <img src="assets/images/header-bg2.svg">
+                <img src="assets/images/header-bg2.svg" />
             </div>
             <div class="right-header">
-                <img src="assets/images/githublogo.svg">
+                <img src="assets/images/githublogo.svg" />
             </div>
         </header>
         <div class="sidebar">
@@ -35,23 +35,27 @@
         <main>
             <div class="about-container">
                 <div class="banner"></div>
-                <section id="about" class="About">
-                    <div>
+                <div class="dark-section"></div>
+                <section id="about" class="about">
+                    <div class="about-content">
                         <h1 class="section-heading">About Me.</h1>
                         <p class="section-content">
                             Hi! I'm a second year undergraduate student at the National University of Singapore,
-                            studying Data Science and Analytics. I'm an ASEAN scholar, interested in Statistics and
-                            Game Design.
+                            studying Data Science and Analytics. I'm an ASEAN scholar, interested in Statistics and Game
+                            Design.
                         </p>
                     </div>
-                    <img class="profile-pic" src="assets/images/profile-pic.jpg" />
+                    <div class="profile-pic-wrapper">
+                        <img class="profile-pic" src="assets/images/profile-pic.jpg" />
+                        <h2>Nawwaf Sudi</h2>
+                    </div>
                 </section>
             </div>
             <section id="projects" class="section">
                 <h1 class="section-heading">Projects</h1>
                 <p class="section-content">
-                    Below are some of my projects that I've worked on, both in my free time, and as part of coursework. You can
-                    click on each of these to see the details.
+                    Below are some of my projects that I've worked on, both in my free time, and as part of coursework.
+                    You can click on each of these to see the details.
                 </p>
                 <div class="features">
                     <article class="card">
@@ -71,7 +75,6 @@
                             </p>
                         </div>
                     </article>
-                    <hr class="divider" />
                     <article class="card">
                         <div class="card-img">
                             <img src="assets/images/quillycard.png" />
@@ -83,8 +86,9 @@
                             </div>
                             <p>
                                 A simple windows app made with WPF that that is intended for personal use. It features
-                                an intuitive drag-and-drop system and other miscellaeous functions that I often use for game art
-                                reference and designing app workflow, all serialized in a custom .quillx JSON schema.
+                                an intuitive drag-and-drop system and other miscellaeous functions that I often use for
+                                game art reference and designing app workflow, all serialized in a custom .quillx JSON
+                                schema.
                             </p>
                         </div>
                     </article>
@@ -92,7 +96,10 @@
             </section>
             <section id="experience" class="section">
                 <h1 class="section-heading">Experience</h1>
-                <p class="section-content">Beyond academics, I also find comfort in participating in communities that shares my interests. Below are some notable experience I had as a student.</p>
+                <p class="section-content">
+                    Beyond academics, I also find comfort in participating in communities that shares my interests.
+                    Below are some notable experience I had as a student.
+                </p>
                 <div class="features">
                     <article class="card">
                         <div class="card-img">
