Minor banner spacings and margins adjustments

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <div class="profile-pic-wrapper">
                         <img class="profile-pic" src="assets/images/profile-pic.jpg" />
                         <h2>Nawwaf Sudi</h2>
+                        <p>Data Science and Analytics 2028</p>
                     </div>
                 </section>
             </div>
