--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
             href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet" />
         <link rel="icon" type="image/svg+xml" href="assets/images/githublogo.svg" />
+        <meta name="description" content="Hi! This is a page dedicated for displaying my projects and experiences I'm most proud of.">
+        <meta name="robots" content="index, follow">
     </head>
     <body>
         <header>
